--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.685.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "mongoose": "^8.8.0",
-    "multer": "^1.4.5-lts.1"
+    "mongoose": "^8.8.0"
   }
 }
